# ELM

./: Cargo.toml  LICENSE  README.md  SPEC_v0.4.md
.cargo/: config.toml
.claude/data/: assessment_cache.json
.claude/logs/: pre_tool_use.jsonl  session_start.jsonl
.github/changelogs/: changelog_claude-sonnet-4-6_session_818d780a-fad5-4e.md  changelog_claude-sonnet-4-6_session_c1b9f2ef-379a-4d.md
.github/memory/: memory_claude-sonnet-4-6_session_818d780a-fad5-4e.md  memory_claude-sonnet-4-6_session_c1b9f2ef-379a-4d.md
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  HARDWARE.md  MEMORY.md  MVP.md  PREDICTION.md  ROADMAP.md
examples/: thermal_maze.rs
logs/: post_tool_use.jsonl  post_tool_use_failure.jsonl  trigger.json
specs/: critical-implementation-gaps.md  native-pu-indexing.md
src/: agent.rs  bank.rs  environment.rs  lib.rs  loop.rs  main.rs  memory.rs  vga_buffer.rs
src/hal/: discovery.rs  mod.rs  pu.rs  rpi4.rs
src/memory/: bank.rs  mod.rs  pocket.rs  similarity.rs
src/perception/: mod.rs  uee.rs
src/planning/: engine.rs  mod.rs
src/prediction/: engine.rs
src/sensors/: mod.rs  state_self.rs
src/world/: grid.rs
