[package]
name = "elm_kernel"
version = "0.1.0"
edition = "2021"
authors = ["ELM Architect"]

[dependencies]
# Provides a bare-metal heap allocator so we can use Vec and BTreeMap without an OS
linked_list_allocator = "0.10.5"

[profile.release]
# Optimize for speed, strip debug symbols, and panic immediately on crash
opt-level = 3
panic = "abort"
lto = true
