[package]
name = "elm_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = "0.10.5"
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

# Tell Cargo where the library root is
[lib]
name = "elm_kernel"
path = "src/lib.rs"

# Define the MVP as an executable example
[[example]]
name = "thermal_maze"
path = "examples/thermal_maze.rs"

[profile.release]
opt-level = 3
panic = "abort"
lto = true
