[package]
name = "elm_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
linked_list_allocator = "0.10.5"
volatile = "0.2.6"
spin = "0.5.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false }
micromath = "2.0"

# Tell Cargo where the library root is
[lib]
name = "elm_kernel"
path = "src/lib.rs"

# Define the MVP as the primary bootable binary
[[bin]]
name = "thermal_maze"
path = "src/bin/thermal_maze.rs"

[profile.release]
opt-level = 3
panic = "abort"
lto = true
